Filtering, date range, period (week, month, year), duration, day of the week

--- a/CodingTrackerWPF/Views/WeeklyGoalDialogView.xaml
+++ b/CodingTrackerWPF/Views/WeeklyGoalDialogView.xaml
@@ -15,8 +15,12 @@
             <materialDesign:NumericUpDown Name="WeeklyGoalInputNumeric"
                                           Width="auto"
                                           Height="auto"
+                                          materialDesign:HintAssist.FloatingScale="0.6"
+                                          materialDesign:TextFieldAssist.TextBoxViewMargin="0,0,0,0"
+                                          Padding="15,30,25,10"
                                           materialDesign:HintAssist.Hint="Enter your weekly goal in hours"
                                           Style="{StaticResource MaterialDesignFilledNumericUpDown}"
+                                          FontSize="30"
                                           PreviewTextInput="WeeklyGoalInput_PreviewTextInput"
                                           Maximum="168"
                                           Minimum="0"
@@ -32,18 +36,20 @@
                 <Button Grid.Column="1"
                         Name="SubmitWeeklyGoal"
                         Content="Submit"
-                        Width="100"
-                        HorizontalAlignment="Center"
+                        Width="auto"
+                        HorizontalAlignment="Stretch"
                         Style="{StaticResource MaterialDesignFlatButton}"
+                        FontSize="20"
                         Margin="5"
                         Command="{Binding SubmitCommand}"/>
 
                 <Button Grid.Column="0"
                         Name="CancelWeeklyGoal"
                         Content="Cancel"
-                        Width="100"
-                        HorizontalAlignment="Center"
+                        Width="auto"
+                        HorizontalAlignment="Stretch"
                         Style="{StaticResource MaterialDesignFlatButton}"
+                        FontSize="20"
                         Margin="5"
                         Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
             </Grid>
