--- a/CodingTrackerWPF/Views/CodingSessionsView.xaml
+++ b/CodingTrackerWPF/Views/CodingSessionsView.xaml
@@ -26,6 +26,8 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
                     <Button 
@@ -35,7 +37,6 @@
                             FontSize="32"
                             Height="auto"
                             VerticalAlignment="Center"
-                            Width="250"
                             Style="{StaticResource MaterialDesignFlatButton}"
                             Margin="0,5,0,5"
                             Command="{Binding AddCommand}">
@@ -48,10 +49,33 @@
                             FontSize="32"
                             Height="auto"
                             VerticalAlignment="Center"
-                            Width="250"
                             Style="{StaticResource MaterialDesignFlatButton}"
                             Margin="0,5,0,5"
                             Command="{Binding DeleteCommand}">
+                    </Button>
+
+                    <Button 
+                            Grid.Column="2"
+                            Name="FilterRecordButton"
+                            Content="Filter Records"
+                            FontSize="32"
+                            Height="auto"
+                            VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignFlatButton}"
+                            Margin="0,5,0,5"
+                            Command="{Binding FiltersCommand}">
+                    </Button>
+
+                    <Button 
+                            Grid.Column="3"
+                            Name="ResetFilterRecordButton"
+                            Content="Reset Filters"
+                            FontSize="32"
+                            Height="auto"
+                            VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignFlatButton}"
+                            Margin="0,5,0,5"
+                            Command="{Binding ResetFiltersCommand}">
                     </Button>
                 </Grid>
             </Grid>
