--- a/CodingTrackerWPF/Views/LiveCodingSessionView.xaml
+++ b/CodingTrackerWPF/Views/LiveCodingSessionView.xaml
@@ -14,7 +14,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0"
+        <Viewbox Grid.Row="0">
+            <Label 
                Content="Live Coding Session"
                FontSize="48"
                FontFamily="{StaticResource MaterialDesignFont}"
@@ -22,23 +23,25 @@
                VerticalAlignment="Top"
                Padding="10"
                Style="{StaticResource MaterialDesignLabel}"/>
+        </Viewbox>
 
-        <Border Grid.Row="1"
+        <Viewbox Grid.Row="1">
+            <Border 
             Background="{DynamicResource MaterialDesignPaper}"
             BorderBrush="Transparent"
             BorderThickness="2"
             CornerRadius="12">
-            
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
 
-                <TextBlock  Grid.Row="0"
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock  Grid.Row="0"
                             Name="SessionTimerTextBlock"
                             Text="{Binding SessionTimer}"
-                            Margin="0,100,0,0"
+                            Margin="0,25,0,50"
                             FontSize="130"
                             FontFamily="{StaticResource MaterialDesignFont}"
                             HorizontalAlignment="Center"
@@ -46,13 +49,13 @@
                             Style="{StaticResource MaterialDesignTitleLargeTextBlock}"
                             materialDesign:ElevationAssist.Elevation="Dp24"/>
 
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0"
+                        <Button Grid.Column="0"
                         Height="75"
                         Width="300"
                         Name="StartSessionButton"
@@ -63,7 +66,7 @@
                         VerticalAlignment="Stretch"
                         Command="{Binding StartSessionCommand}"/>
 
-                    <Button Grid.Column="1"
+                        <Button Grid.Column="1"
                         Height="75"
                         Width="300"
                         Name="StopSessionButton"
@@ -73,8 +76,9 @@
                         HorizontalAlignment="Left"
                         VerticalAlignment="Stretch"
                         Command="{Binding StopSessionCommand}"/>
+                    </Grid>
                 </Grid>
-            </Grid>
-        </Border>
+            </Border>
+        </Viewbox>
     </Grid>
 </UserControl>
